# prebuilt-proto-toolchain-example

./: .bazelrc  MODULE.bazel
jvm/: BUILD.bazel
proto/: BUILD.bazel
